--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ $(function(){
 					<div class="article-img"><img src="assets/image/article1@2x.png" alt="コーヒー"></div>
 							<div class="article-in">
 								<div class="article-head clearfix">
-									<h2><a>コーヒー豆の選び方</a></h2>
+									<h2><a href="single.html">コーヒー豆の選び方</a></h2>
 										<div class="data"><a>2020/06/16</a></div>
 								</div>	
-											<p><a>コーヒー豆の選び方。産地、焙煎、いろいろな要因によって風味や香りが変わってきます。選び方は、珈琲豆それぞれの特徴を理解し、自分好みの味を見つけることです。
+											<p><a href="single.html">コーヒー豆の選び方。産地、焙煎、いろいろな要因によって風味や香りが変わってきます。選び方は、珈琲豆それぞれの特徴を理解し、自分好みの味を見つけることです。
 											</a></p>
 												<div class="category"><a>beans</a></div>
 							</div>	
@@ -127,10 +127,10 @@ $(function(){
 						<div class="article-img"><img src="assets/image/article2@2x.png" alt="コーヒー"></div>
 							<div class="article-in">
 								<div class="article-head clearfix">
-									<h2><a>アンティークにもオススメ！<br>古き良きコーヒーミル。</a></h2>
+									<h2><a href="single.html">アンティークにもオススメ！<br>古き良きコーヒーミル。</a></h2>
 										<div class="data"><a>2020/06/16</a></div>
 								</div>
-											<p><a>現在、電動のコーヒーミルがたくさん出回っており、手巻きのミルは姿を見ることがなくなりました。
+											<p><a href="single.html">現在、電動のコーヒーミルがたくさん出回っており、手巻きのミルは姿を見ることがなくなりました。
 											</a></p>
 												<div class="category"><a>coffee tools</a></div>
 							</div>
@@ -140,7 +140,7 @@ $(function(){
 					<div class="article-img"><img src="assets/image/article3@2x.png" alt="コーヒー"></div>
 						<div class="article-in">
 							<div class="article-head clearfix">
-								<h2><a>秋の新作コーヒー豆発売</a></h2>
+								<h2><a href="single.html">秋の新作コーヒー豆発売</a></h2>
 									<div class="data"><a>2020/06/16/</a></div>
 							</div>
 										<p><a>秋の新作ブレンド、オータムブレンド発売！ブラジル、エチオピア、コロンビアの豆をブレンド。ハンドドリップ、プレスコーヒーにオススメ。
@@ -259,10 +259,10 @@ $(function(){
 	<div class="ft-inner">
 		<div id="fotter_nav">
 			<ul class=>
-				<li><a href="#">コーヒー豆/beans</a></li>
-				<li><a href="#">コーヒーを淹れる/make coffee</a></li>
-				<li><a href="#">豆知識/coffee Knowledge</a></li>
-				<li><a href="#">器具/coffee tools</a></li>
+				<li><a href="single.html">コーヒー豆/beans</a></li>
+				<li><a href="single.html">コーヒーを淹れる/make coffee</a></li>
+				<li><a href="single.html">豆知識/coffee Knowledge</a></li>
+				<li><a href="single.html">器具/coffee tools</a></li>
 			</ul>
 		</div>
 		
