--- a/archive.html
+++ b/archive.html
@@ -68,10 +68,10 @@ $(function(){
 			<div class="overlay">
 				<span class="material-icons" id="close">close</span>
 				<ul>
-					<li><a href="#">コーヒー豆/beans</a></li>
-					<li><a href="#">コーヒーを淹れる/make coffee</a></li>
-					<li><a href="#">豆知識/coffee Knowledge</a></li>
-					<li><a href="#">器具/coffee tools</a></li>
+					<li><a href="archive.html">コーヒー豆/beans</a></li>
+					<li><a href="archive.html">コーヒーを淹れる/make coffee</a></li>
+					<li><a href="archive.html">豆知識/coffee Knowledge</a></li>
+					<li><a href="archive.html">器具/coffee tools</a></li>
 					<li class="icon"><a href="#"><img src="assets/image/twitter@2x.png" alt="twitter"></a></li>
 					<li class="icon"><a href="#"><img src="assets/image/instagram@2x.png" alt="instagram"></a></li>
 				</ul>
@@ -92,10 +92,10 @@ $(function(){
 <div class="header_nav sp-none">
 	<div class="main-nav clearfix">
 		<ul class="clearfix nav-left">
-			<li><a href="#">コーヒー豆/beans</a></li>
-			<li><a href="#">コーヒーを淹れる/make coffee</a></li>
-			<li><a href="#">豆知識/coffee Knowledge</a></li>
-			<li><a href="#">器具/coffee tools</a></li>
+			<li><a href="archive.html"></a>コーヒー豆/beans</a></li>
+			<li><a href="archive.html">コーヒーを淹れる/make coffee</a></li>
+			<li><a href="archive.html">豆知識/coffee Knowledge</a></li>
+			<li><a href="archive.html">器具/coffee tools</a></li>
 		</ul>
 			<ul class="nav-right clearfix">
 				<li class="icon"><a href="#"><img src="assets/image/twitter@2x.png" alt="twitter"></a></li>
@@ -120,10 +120,10 @@ $(function(){
 						<div class="article-img"><img src="assets/image/article1@2x.png" alt="コーヒー"></div>
 								<div class="article-in">
 									<div class="article-head clearfix">
-										<h2><a>コーヒー豆の選び方</a></h2>
-											<div class="data"><a>2020/06/16</a></div>
+										<h2><a href="single.html">コーヒー豆の選び方</a></h2>
+											<div class="data"><a href="single.html">2020/06/16</a></div>
 									</div>	
-												<p><a>コーヒー豆の選び方。産地、焙煎、いろいろな要因によって風味や香りが変わってきます。選び方は、珈琲豆それぞれの特徴を理解し、自分好みの味を見つけることです。
+												<p><a href="single.html">コーヒー豆の選び方。産地、焙煎、いろいろな要因によって風味や香りが変わってきます。選び方は、珈琲豆それぞれの特徴を理解し、自分好みの味を見つけることです。
 												</a></p>
 													<div class="category"><a>beans</a></div>
 								</div>	
@@ -133,10 +133,10 @@ $(function(){
 							<div class="article-img"><img src="assets/image/article2@2x.png"></div>
 								<div class="article-in">
 									<div class="article-head clearfix">
-										<h2><a>アンティークにもオススメ！<br>古き良きコーヒーミル。</a></h2>
+										<h2><a href="single.html">アンティークにもオススメ！<br>古き良きコーヒーミル。</a></h2>
 											<div class="data"><a>2020/06/16</a></div>
 									</div>
-												<p><a>現在、電動のコーヒーミルがたくさん出回っており、手巻きのミルは姿を見ることがなくなりました。
+												<p><a href="single.html">現在、電動のコーヒーミルがたくさん出回っており、手巻きのミルは姿を見ることがなくなりました。
 												</a></p>
 													<div class="category"><a>coffee tools</a></div>
 								</div>
@@ -146,8 +146,8 @@ $(function(){
 						<div class="article-img"><img src="assets/image/article3@2x.png"></div>
 							<div class="article-in">
 								<div class="article-head clearfix">
-									<h2><a>秋の新作コーヒー豆発売</a></h2>
-										<div class="data"><a>2020/06/16/</a></div>
+									<h2><a href="single.html">秋の新作コーヒー豆発売</a></h2>
+										<div class="data"><a href="single.html">2020/06/16/</a></div>
 								</div>
 											<p><a>秋の新作ブレンド、オータムブレンド発売！ブラジル、エチオピア、コロンビアの豆をブレンド。ハンドドリップ、プレスコーヒーにオススメ。
 											</a></p>
@@ -203,10 +203,10 @@ $(function(){
 	<div class="ft-inner">
 		<div id="fotter_nav">
 			<ul class=>
-				<li><a href="#">コーヒー豆/beans</a></li>
-				<li><a href="#">コーヒーを淹れる/make coffee</a></li>
-				<li><a href="#">豆知識/coffee Knowledge</a></li>
-				<li><a href="#">器具/coffee tools</a></li>
+				<li><a href="archive.html">コーヒー豆/beans</a></li>
+				<li><a href="archive.html">コーヒーを淹れる/make coffee</a></li>
+				<li><a href="archive.html"></a>豆知識/coffee Knowledge</a></li>
+				<li><a href="archive.html">器具/coffee tools</a></li>
 			</ul>
 		</div>
 		
