--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ $(function(){
 								<h2><a href="single.html">秋の新作コーヒー豆発売</a></h2>
 									<div class="data"><a>2020/06/16/</a></div>
 							</div>
-										<p><a>秋の新作ブレンド、オータムブレンド発売！ブラジル、エチオピア、コロンビアの豆をブレンド。ハンドドリップ、プレスコーヒーにオススメ。
+										<p><a href="single.html">秋の新作ブレンド、オータムブレンド発売！ブラジル、エチオピア、コロンビアの豆をブレンド。ハンドドリップ、プレスコーヒーにオススメ。
 										</a></p>
 											<div class="category"><a>beans</a></div>
 						</div>
