--- a/archive.html
+++ b/archive.html
@@ -92,7 +92,7 @@ $(function(){
 <div class="header_nav sp-none">
 	<div class="main-nav clearfix">
 		<ul class="clearfix nav-left">
-			<li><a href="archive.html"></a>コーヒー豆/beans</a></li>
+			<li><a href="archive.html">コーヒー豆/beans</a></li>
 			<li><a href="archive.html">コーヒーを淹れる/make coffee</a></li>
 			<li><a href="archive.html">豆知識/coffee Knowledge</a></li>
 			<li><a href="archive.html">器具/coffee tools</a></li>
