--- a/archive.html
+++ b/archive.html
@@ -205,7 +205,7 @@ $(function(){
 			<ul class=>
 				<li><a href="archive.html">コーヒー豆/beans</a></li>
 				<li><a href="archive.html">コーヒーを淹れる/make coffee</a></li>
-				<li><a href="archive.html"></a>豆知識/coffee Knowledge</a></li>
+				<li><a href="archive.html">豆知識/coffee Knowledge</a></li>
 				<li><a href="archive.html">器具/coffee tools</a></li>
 			</ul>
 		</div>
